Added most CSS.

--- a/Website/Wonders of the world/ColosseumPage.html
+++ b/Website/Wonders of the world/ColosseumPage.html
@@ -25,13 +25,13 @@
 	<hr>
 
 	<!--Main info-->
-	<div>
+	<div class="background">
 		<h1>Colosseum</h1>
 		<p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
 	</div>
 
 	<!--Info-->
-	<div>
+	<div class="background">
 		<img src = "https://cdn.britannica.com/36/162636-050-932C5D49/Colosseum-Rome-Italy.jpg?w=1000" alt = "Image of the Colosseum" width = "300" height = "225">
 		<table>
                 <tr>
@@ -45,7 +45,7 @@
 		</table>
 	</div>
 
-	<footer>
+	<footer class = "background" id = "footerStuff">
 		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
