--- a/Website/Wonders of the world/GizaPage.html
+++ b/Website/Wonders of the world/GizaPage.html
@@ -25,7 +25,7 @@
 	<hr>
 
 	<!--Main info-->
-	<div>
+	<div class="background">
 		<h1>Pyramid of Giza</h1>
 		<h2>Aparrently this is not on the list but the PowerPoint says to include this</h2>
 		<p>Pyramids of Giza, three 4th-dynasty (c. 2575–c. 2465 bce) pyramids erected on a rocky plateau on the west bank of the Nile River near Al-Jīzah (Giza) in northern Egypt. In ancient times they were included among the Seven Wonders of the World. The ancient ruins of the Memphis area, including the Pyramids of Giza, Ṣaqqārah, Dahshūr, Abū Ruwaysh, and Abū Ṣīr, were collectively designated a UNESCO World Heritage site in 1979.
@@ -34,7 +34,7 @@ The designations of the pyramids—Khufu, Khafre, and Menkaure—correspond to t
 	</div>
 
 	<!--Info-->
-	<div>
+	<div class="background">
 		<img src = "https://cdn.britannica.com/39/155939-050-A709B5D7/Pyramids-Giza-Cairo-Egypt.jpg?w=300" alt = "Image of Pyramid of Giza" width = "300" height = "225">
 		<table>
                 <tr>
@@ -48,7 +48,7 @@ The designations of the pyramids—Khufu, Khafre, and Menkaure—correspond to t
 		</table>
 	</div>
 
-	<footer>
+	<footer class = "background" id = "footerStuff">
 		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
