--- a/Website/Wonders of the world/GreatWallPage.html
+++ b/Website/Wonders of the world/GreatWallPage.html
@@ -25,24 +25,38 @@
 	<hr>
 
 	<!--Main info-->
-	<div class="background">
+	<div class = "HorizontalPos">
+	<div class="background" style : "display : inline-block">
 		<h1> Great Wall of China</h1>
 		<p>Great might be an understatement. One of the world's largest building-construction projects, the Great Wall of China is widely thought to be about 5,500 miles (8,850 km) long; a disputed Chinese study, however, claims the length is 13,170 miles (21,200 km). Work began in the 7th century BCE and continued for two millennia. Although called a “wall,” the structure actually features two parallel walls for lengthy stretches. In addition, watchtowers and barracks dot the bulwark. One not-so-great thing about the wall, however, was its effectiveness. Although it was built to prevent invasions and raids, the wall largely failed to provide actual security. Instead, scholars have noted that it served more as “political propaganda.”</p>
 	</div>
 
 	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/82/94382-050-20CF23DB/Great-Wall-of-China-Beijing.jpg?w=1000" alt = "Image of Great Wall of China" width = "300" height = "225">
-		<table>
+	<div class="background horizontalPos" style : "display : inline-block">
+		<table style = "margin : auto;">
                 <tr>
                     <th>Data</th>
                     <th>Type</th>
                 </tr>
                 <tr>
                     <td>Data1</td>
-                    <td>Type1</td>
+                    <td>Construction date</td>
+                </tr>
+		<tr>
+                    <td>Data1</td>
+                    <td>Size</td>
+                </tr>
+		<tr>
+                    <td>Data1</td>
+                    <td>Ruler at time</td>
+                </tr>
+		<tr>
+                    <td>Data1</td>
+                    <td></td>
                 </tr>
 		</table>
+		<img src = "https://cdn.britannica.com/82/94382-050-20CF23DB/Great-Wall-of-China-Beijing.jpg?w=1000" alt = "Image of Great Wall of China" width = "300" height = "225">
+	</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
