--- a/Website/Wonders of the world/MainPage.html
+++ b/Website/Wonders of the world/MainPage.html
@@ -25,13 +25,14 @@
 	<hr>
 
 	<!--Main info-->
-	<div class="background">
+	<div class = "HorizontalPos">
+	<div class = "background">
         <h1>Description on the Seven Wonders of the World</h1>
         <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
 	</div>
 
 	<!--Info-->
-	<div class="background">
+	<div class = "background">
         <img src = "https://images.twinkl.co.uk/tw1n/image/private/t_630_eco/image_repo/9a/6d/t-g-1712584057-the-seven-wonders-of-the-world-instant-photo-style-display-photos_ver_1.jpg" alt = "Image of New Seven Wonders of the World" width = "400" height = "200">
         <ul>
 			<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
@@ -43,6 +44,7 @@
 			<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
 			<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
         </ul>
+	</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
