--- a/Website/Wonders of the world/PicchuPage.html
+++ b/Website/Wonders of the world/PicchuPage.html
@@ -25,6 +25,7 @@
 	<hr>
 
 	<!--Main info-->
+	<div class = "HorizontalPos">
 	<div class="background">
 		<h1>Machu Picchu</h1>
 		<p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
@@ -43,6 +44,7 @@
                     <td>Type1</td>
                 </tr>
 		</table>
+	</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
