--- a/Website/Wonders of the world/FormPage.html
+++ b/Website/Wonders of the world/FormPage.html
@@ -1,8 +1,10 @@
-<!DOCTYPE = HTML>
+<!DOCTYPE = html>
 <html>
     <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>New Seven Wonders of the World</title>
-		<script src = "Wonders.js"> </script>
+		<script src = "Wonders.js"></script>
 		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
@@ -34,28 +36,37 @@
  - Email - Required - 1 @ only and min 1 .
  - Date of visit - Optional
  - Message - Required-->
-	<form id = "FormID" action = "Wonders.js" post = "post" class = "background horizontalPos">
+	<form id = "FormName" class = "background horizontalPos">
 		<div class = "horizontalPos">
 			<div class = "verticalPos">
-				<label for = "FirstNameTB">First name : </label>
-				<label for = "SecondNameTB">Second name : </label>
-				<label for = "EmailAddress">Email address : </label>
-				<label for = "DateOfVisit">Date of Visit (if applicable) : </label>
-				<input type = "submit" value = "Submit Form" onclick = "alert('Form complete');">
-				<button type = "submit" name = "Form" onclick = "alert('Form complete');">Old button : Hello there!</button>
+				<label for = "FirstNom">First name : </label>
+				<label for= "SecondNom">Second name : </label>
+				<label for = "Email">Email address : </label>
+				<label for = "VisitDate">Date of Visit (if applicable) : </label>
+				<input type = "submit" name = "SubmitButton" value = "Hello there! I wanna submit input">
 			</div>
 			<div class = "verticalPos">
-				<input name = "FormFirstN" id = "FirstNameTB" placeholder = "John">
-				<input name = "FormLastN" id = "SecondNameTB" placeholder = "Doe">
-				<input name = "FormEmal" id = "EmailAddress" type = "email" placeholder = "JohnDoe03@gmail.com">
-				<input name = "FormDate" id = "DateOfVisit" type = "date" min = "01/01/1900"> <!--Cannot get function to get current data for value and max working-->
+				<input id = "FirstNom" name = "FirstName" placeholder = "John">
+				<input id = "SecondNom" name = "SecondName" placeholder = "Doe">
+				<input id = "Email" name = "EmailAddress" type = "email" placeholder = "JohnDoe03@gmail.com">
+				<input id = "VisitDate" name = "DateOfVisit" type = "date" min = "01/01/1900"> <!--Cannot get function to get current data for value and max working-->
 			</div>
 		</div>
-		<div>
-			<textarea name = "FormText" rows = "8" cols = "100" placeholder = "Put down your experiences at these wonders, anywhere else or just a little bit of feeback"></textarea>
+		<div style = "border : 5px">
+			<textarea id = "TextBox" rows = "8" cols = "100" placeholder = "Put down your experiences at these wonders, anywhere else or just a little bit of feeback"></textarea>
 		</div>
 	</form>
-	
+
+	<div id = "Output" class = "background">
+	    <h3 style = "text-align : center;"><u>Output Log : </u><h3>
+	    <p style = "background-color : white; border : 3px solid black; border-radius : 4px; text-align : center;">Your form submition will be confirmed here.</p>
+	</div>
+
+	<div id = "specialStuff" class = "horizontalPos">
+	    <p style = "font-size : x-small;">Sam's gyatt</p>
+	    <p style = "font-size : x-small;">Advin's gyatt</p>
+	</div>
+
 	<footer class = "background" id = "footerStuff">
 		<p>All information sourced from <a href = "https://www.britannica.com/list/new-seven-wonders-of-the-world">Britanica's page on the New Seven Wonders of the World</a>, images sourced form google searches</p>
 		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
