Tested main functionalities of the form to work.

--- a/Website/Wonders of the world/FormPage.html
+++ b/Website/Wonders of the world/FormPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE = html>
 <html>
     <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>New Seven Wonders of the World</title>
 		<script src = "Wonders.js"></script>
 		<link rel = "stylesheet" href = "Wonders.css">
@@ -58,13 +58,13 @@
 	</form>
 
 	<div id = "Output" class = "background">
-	    <h3 style = "text-align : center;"><u>Output Log : </u><h3>
-	    <p style = "background-color : white; border : 3px solid black; border-radius : 4px; text-align : center;">Your form submition will be confirmed here.</p>
+		<h3 style = "text-align : center;"><u>Output Log : </u><h3>
+		<p id = "OutBox" style = "background-color : white; border : 3px solid black; border-radius : 4px; text-align : center;">Your form submition will be confirmed here.</p>
 	</div>
 
 	<div id = "specialStuff" class = "horizontalPos">
-	    <p style = "font-size : x-small;">Sam's gyatt</p>
-	    <p style = "font-size : x-small;">Advin's gyatt</p>
+		<p style = "font-size : x-small;">Sam's gyatt</p>
+		<p style = "font-size : x-small;">Advin's gyatt</p>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
