Added more data to the HTML and fixed footer CSS so it doesn't overlap other elements.

--- a/Website/Wonders of the world/ColosseumPage.html
+++ b/Website/Wonders of the world/ColosseumPage.html
@@ -26,25 +26,22 @@
 
 	<!--Main info-->
 	<div class = "HorizontalPos">
-	<div class="background">
-		<h1>Colosseum</h1>
-		<p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
-	</div>
+		<div class="background">
+			<h1>Colosseum</h1>
+			<p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
+		</div>
 
-	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/36/162636-050-932C5D49/Colosseum-Rome-Italy.jpg?w=1000" alt = "Image of the Colosseum" width = "300" height = "225">
-		<table>
-                <tr>
-                    <th>Data</th>
-                    <th>Type</th>
-                </tr>
-                <tr>
-                    <td>Data1</td>
-                    <td>Type1</td>
-                </tr>
-		</table>
-	</div>
+		<!--Info-->
+		<div class="background">
+			<img src = "https://cdn.britannica.com/36/162636-050-932C5D49/Colosseum-Rome-Italy.jpg?w=1000" alt = "Image of the Colosseum" width = "300" height = "225">
+			<ul>
+				<li>Amphitheater in Rome, completed in 80 CE under Emperor Titus.</li>
+				<li>Could hold up to 80,000 spectators for gladiator games and public events.</li>
+				<li>Partially ruined by earthquakes and stone theft.</li>
+				<li>Could hold 50,000-80,000 spectators.</li>
+				<li>Over 0.5m people and 1m animals believed to have died in the Colosseum during its use.</li>
+			</ul>
+		</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
