--- a/Website/Wonders of the world/FormPage.html
+++ b/Website/Wonders of the world/FormPage.html
@@ -63,8 +63,7 @@
 	</div>
 
 	<div id = "specialStuff" class = "horizontalPos">
-		<p style = "font-size : x-small;">Sam's gyatt</p>
-		<p style = "font-size : x-small;">Advin's gyatt</p>
+		<p style = "font-size : x-small;">Sam's gyatt & Advin's gyatt</p>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
