--- a/Website/Wonders of the world/GreatWallPage.html
+++ b/Website/Wonders of the world/GreatWallPage.html
@@ -34,28 +34,13 @@
 	<!--Info-->
 		<div class="background verticalPos">
 			<img src = "https://cdn.britannica.com/82/94382-050-20CF23DB/Great-Wall-of-China-Beijing.jpg?w=1000" alt = "Image of Great Wall of China" width = "300" height = "225">
-			<table style = "margin : auto;">
-				<tr>
-					<th>Data</th>
-					<th>Type</th>
-				</tr>
-				<tr>
-					<td>Data1</td>
-					<td>Construction date</td>
-				</tr>
-				<tr>
-					<td>Data1</td>
-					<td>Size</td>
-				</tr>
-				<tr>
-                    <td>Data1</td>
-                    <td>Ruler at time</td>
-                </tr>
-				<tr>
-                    <td>Data1</td>
-                    <td></td>
-                </tr>
-			</table>
+			<ul>
+				<li>Built between 7th century BCE and 17th century CE.</li>
+				<li>>13,000 miles long, original use was to protect Chinese states from invasions.</li>
+				<li>UNESCO World Heritage Site since 1987.</li>
+				<li>Approx. 21.2km (13.2 miles), though much of it is in ruins or disappeared.</li>
+				<li>Construction started in the 7th century BCE during the Warring States period, with major expansions under the Qin, Han, and Ming Dynasties.</li>
+			</ul>
 		</div>
 	</div>
 
