--- a/Website/Wonders of the world/MahalPage.html
+++ b/Website/Wonders of the world/MahalPage.html
@@ -26,25 +26,22 @@
 
 	<!--Main info-->
 	<div class = "HorizontalPos">
-	<div class="background">
-		<h1>Taj Mahal</h1>
-		<p>This mausoleum complex in Agra, India, is regarded as one of the world’s most iconic monuments and is perhaps the finest example of Mughal architecture. It was built by Emperor Shah Jahān (reigned 1628–58) to honor his wife Mumtāz Maḥal (“Chosen One of the Palace”), who died in 1631 giving birth to their 14th child. It took about 22 years and 20,000 workers to construct the complex, which includes an immense garden with a reflecting pool. The mausoleum is made of white marble that features semiprecious stones in geometric and floral patterns. Its majestic central dome is surrounded by four smaller domes. According to some reports, Shah Jahān wished to have his own mausoleum made out of black marble. However, he was deposed by one of his sons before any work began.</p>
-	</div>
+		<div class="background">
+			<h1>Taj Mahal</h1>
+			<p>This mausoleum complex in Agra, India, is regarded as one of the world’s most iconic monuments and is perhaps the finest example of Mughal architecture. It was built by Emperor Shah Jahān (reigned 1628–58) to honor his wife Mumtāz Maḥal (“Chosen One of the Palace”), who died in 1631 giving birth to their 14th child. It took about 22 years and 20,000 workers to construct the complex, which includes an immense garden with a reflecting pool. The mausoleum is made of white marble that features semiprecious stones in geometric and floral patterns. Its majestic central dome is surrounded by four smaller domes. According to some reports, Shah Jahān wished to have his own mausoleum made out of black marble. However, he was deposed by one of his sons before any work began.</p>
+		</div>
 
-	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/86/170586-050-AB7FEFAE/Taj-Mahal-Agra-India.jpg?w=1000" alt = "Image of Taj Mahal" width = "300" height = "225">
-		<table>
-                <tr>
-                    <th>Data</th>
-                    <th>Type</th>
-                </tr>
-                <tr>
-                    <td>Data1</td>
-                    <td>Type1</td>
-                </tr>
-		</table>
-	</div>
+		<!--Info-->
+		<div class="background">
+			<img src = "https://cdn.britannica.com/86/170586-050-AB7FEFAE/Taj-Mahal-Agra-India.jpg?w=1000" alt = "Image of Taj Mahal" width = "300" height = "225">
+			<ul>
+				<li>Marble mausoleum built by Mughal Emperor Shah Jahan between 1632-1653.</li>
+				<li>Dedicated to his wife Mumtaz Mahal.</li>
+				<li>Symbol of eternal love and a UNESCO World Heritage Site since 1983.</li>
+				<li>Built between 1632 and 1653 by Mughal Emperor Shah Jahan as a mausoleum for his wife Mumtaz Mahal.</li>
+				<li>The changing colors of the marble reflect different moods of the day—pinkish in the morning, white in the afternoon, and golden under moonlight.</li>
+			</ul>
+		</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
