--- a/Website/Wonders of the world/PicchuPage.html
+++ b/Website/Wonders of the world/PicchuPage.html
@@ -26,25 +26,22 @@
 
 	<!--Main info-->
 	<div class = "HorizontalPos">
-	<div class="background">
-		<h1>Machu Picchu</h1>
-		<p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
-	</div>
+		<div class="background">
+			<h1>Machu Picchu</h1>
+			<p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
+		</div>
 
-	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/30/94530-050-99493FEA/Machu-Picchu.jpg?w=1000" alt = "Image of Machu Picchu" width = "300" height = "225">
-		<table>
-                <tr>
-                    <th>Data</th>
-                    <th>Type</th>
-                </tr>
-                <tr>
-                    <td>Data1</td>
-                    <td>Type1</td>
-                </tr>
-		</table>
-	</div>
+		<!--Info-->
+		<div class="background">
+			<img src = "https://cdn.britannica.com/30/94530-050-99493FEA/Machu-Picchu.jpg?w=1000" alt = "Image of Machu Picchu" width = "300" height = "225">
+			<ul>
+				<li>Inca citadel built in the 15th century.</li>
+				<li>Located 2,430 meters above sea level in the Andes.</li>
+				<li>Abandoned during the Spanish conquest, rediscovered in 1911.</li>
+				<li>Intihuatana (Sun Stone): A ritual stone believed to have astronomical significance.</li>
+				<li>Agricultural terraces and advanced irrigation systems.</li>
+			</ul>
+		</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
