--- a/Website/Wonders of the world/PetraPage.html
+++ b/Website/Wonders of the world/PetraPage.html
@@ -26,25 +26,22 @@
 
 	<!--Main info-->
 	<div class = "HorizontalPos">
-	<div class="background">
-		<h1>Petra</h1>
-		<p>The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
-	</div>
+		<div class="background">
+			<h1>Petra</h1>
+			<p>The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
+		</div>
 
-	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/25/153525-050-FC43840D/Khaznah-Petra-Jordan.jpg?w=1000" alt = "Image of Petra" width = "300" height = "225">
-		<table>
-                <tr>
-                    <th>Data</th>
-                    <th>Type</th>
-                </tr>
-                <tr>
-                    <td>Data1</td>
-                    <td>Type1</td>
-                </tr>
-		</table>
-	</div>
+		<!--Info-->
+		<div class="background">
+			<img src = "https://cdn.britannica.com/25/153525-050-FC43840D/Khaznah-Petra-Jordan.jpg?w=1000" alt = "Image of Petra" width = "300" height = "225">
+			<ul>
+				<li>Ancient city carved into red sandstone cliffs, established around 300 BCE.</li>
+				<li>Famous for the Treasury (Al-Khazneh) and Monastery.</li>
+				<li>Served as a major trading hub for the Nabateans.</li>
+				<li>Monastery (Ad Deir): A massive temple accessible by climbing 800 steps.</li>
+				<li>Established around 300 BCE by the Nabateans, flourishing as a trade center for incense, spices, and silk.</li>
+			</ul>
+		</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
