--- a/Website/Wonders of the world/RedeemerPage.html
+++ b/Website/Wonders of the world/RedeemerPage.html
@@ -26,25 +26,22 @@
 
 	<!--Main info-->
 	<div class = "HorizontalPos">
-	<div class="background">
-		<h1>Christ the Redeemer</h1>
-		<p>Christ the Redeemer, a colossal statue of Jesus, stands atop Mount Corcovado in Rio de Janeiro. Its origins date to just after World War I, when some Brazilians feared a “tide of godlessness.” They proposed a statue, which was ultimately designed by Heitor da Silva Costa, Carlos Oswald, and Paul Landowski. Construction began in 1926 and was completed five years later. The resulting monument stands 98 feet (30 meters) tall—not including its base, which is about 26 feet (8 meters) high—and its outstretched arms span 92 feet (28 meters). It is the largest Art Deco sculpture in the world. Christ the Redeemer is made of reinforced concrete and is covered in approximately six million tiles. Somewhat disconcertingly, the statue has often been struck by lightning, and in 2014 the tip of Jesus’s right thumb was damaged during a storm.</p>
-	</div>
+		<div class="background">
+			<h1>Christ the Redeemer</h1>
+			<p>Christ the Redeemer, a colossal statue of Jesus, stands atop Mount Corcovado in Rio de Janeiro. Its origins date to just after World War I, when some Brazilians feared a “tide of godlessness.” They proposed a statue, which was ultimately designed by Heitor da Silva Costa, Carlos Oswald, and Paul Landowski. Construction began in 1926 and was completed five years later. The resulting monument stands 98 feet (30 meters) tall—not including its base, which is about 26 feet (8 meters) high—and its outstretched arms span 92 feet (28 meters). It is the largest Art Deco sculpture in the world. Christ the Redeemer is made of reinforced concrete and is covered in approximately six million tiles. Somewhat disconcertingly, the statue has often been struck by lightning, and in 2014 the tip of Jesus’s right thumb was damaged during a storm.</p>
+		</div>
 
-	<!--Info-->
-	<div class="background">
-		<img src = "https://cdn.britannica.com/54/150754-050-5B93A950/statue-Christ-the-Redeemer-Rio-de-Janeiro.jpg?w=1000" alt = "Image of Christ the Redeemer" width = "300" height = "225">
-		<table>
-                <tr>
-                    <th>Data</th>
-                    <th>Type</th>
-                </tr>
-                <tr>
-                    <td>Data1</td>
-                    <td>Type1</td>
-                </tr>
-		</table>
-	</div>
+		<!--Info-->
+		<div class="background">
+			<img src = "https://cdn.britannica.com/54/150754-050-5B93A950/statue-Christ-the-Redeemer-Rio-de-Janeiro.jpg?w=1000" alt = "Image of Christ the Redeemer" width = "300" height = "225">
+			<ul>
+				<li>Iconic 98ft tall statue of Jesus overlooking Rio de Janeiro.</li>
+				<li>Completed in 1931</li>
+				<li>Symbol of Christianity and peace.</li>
+				<li>Built between 1922-1931 to commemorate Brazil's centenary of independence.</li>
+				<li>Made of reinforced concrete and soapstone, with a lightning protection system.</li>
+			</ul>
+		</div>
 	</div>
 
 	<footer class = "background" id = "footerStuff">
